data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1690.wast
;; 1. **Test Invalid Label Index**:    - **Description**: Provide a `br_if` instruction with an out-of-bounds label index value.    - **Constraint**: This checks if the implementation properly handles label index bounds verification.    - **Incorrect Condition Evaluation**: The `br_if` incorrectly branches due to an invalid label index, which should raise an error.

(assert_invalid
  (module (func $invalid-label-index
    (block
      (br_if 1 (i32.const 1))
    )
  ))
  "invalid label index"
)